--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_bubble_chart_black_24dp"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_bubble_chart_black_24dp"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Home"></activity>
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Home" />
         <activity android:name=".SignIn" />
         <activity android:name=".SignUp" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".AddNewMaterial">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
