--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@drawable/ic_bubble_chart_black_24dp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".UploadMaterial"></activity>
+        <activity android:name=".SignIn"></activity>
+        <activity android:name=".UploadMaterial" />
         <activity android:name=".Webview" />
         <activity android:name=".StudentMaterials" />
         <activity android:name=".Profile" />
@@ -21,7 +22,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Home" />
         <activity android:name=".SignUp" />
-        <activity android:name=".SignIn">
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
