--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_bubble_chart_black_24dp"
+        android:icon="@mipmap/ic_grain_image"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_bubble_chart_black_24dp"
+        android:roundIcon="@mipmap/ic_grain_image"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".SignIn"></activity>
