--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_grain_image"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".About"></activity>
+        <activity android:name=".ForgottenPassword"></activity>
+        <activity android:name=".About" />
         <activity android:name=".SignIn" />
         <activity android:name=".UploadMaterial" />
         <activity android:name=".Webview" />
