create course without material

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,32 @@
         android:roundIcon="@mipmap/ic_grain_image"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ForgottenPassword"></activity>
-        <activity android:name=".About" />
-        <activity android:name=".SignIn" />
-        <activity android:name=".UploadMaterial" />
-        <activity android:name=".Webview" />
-        <activity android:name=".StudentMaterials" />
-        <activity android:name=".Profile" />
-        <activity android:name=".AddMaterials" />
-        <activity android:name=".AddNewMaterial" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Home" />
-        <activity android:name=".SignUp" />
-        <activity android:name=".SplashScreen">
+        <activity android:name=".ForgottenPassword"
+            android:configChanges="screenLayout|orientation|screenSize"></activity>
+        <activity android:name=".About"
+            android:configChanges="screenLayout|orientation|screenSize"/>
+        <activity android:name=".SignIn"
+            android:configChanges="screenLayout|orientation|screenSize"/>
+        <activity android:name=".UploadMaterial"
+            android:configChanges="screenLayout|orientation|screenSize" />
+        <activity android:name=".Webview"
+            android:configChanges="screenLayout|orientation|screenSize"/>
+        <activity android:name=".StudentMaterials"
+            android:configChanges="screenLayout|orientation|screenSize"/>
+        <activity android:name=".Profile"
+            android:configChanges="screenLayout|orientation|screenSize" />
+        <activity android:name=".AddMaterials"
+            android:configChanges="screenLayout|orientation|screenSize" />
+        <activity android:name=".AddNewMaterial"
+            android:configChanges="screenLayout|orientation|screenSize" />
+        <activity android:name=".MainActivity"
+            android:configChanges="screenLayout|orientation|screenSize" />
+        <activity android:name=".Home"
+            android:configChanges="screenLayout|orientation|screenSize"/>
+        <activity android:name=".SignUp"
+            android:configChanges="screenLayout|orientation|screenSize" />
+        <activity android:name=".SplashScreen"
+            android:configChanges="screenLayout|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
